<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_ejercicio"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txt_ejercicio"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/txt_ejercicio"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txt_ejercicio"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.373" />

    <EditText
        android:id="@+id/txt_ejercicio"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txt_ejercicio"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.313" />

    <EditText
        android:id="@+id/txt_ejercicio"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txt_ejercicio"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/txt_ejercicio"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txt_ejercicio"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/txt_ejercicio"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txt_ejercicio"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/txt_ejercicio"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txt_ejercicio"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/txt_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pregunta"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/txt_lunes"
        android:layout_width="56dp"
        android:layout_height="18dp"
        android:text="@string/txt_lunes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/txt_martes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_martes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lunes"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/txt_miercoles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_miercoles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_martes"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/txt_jueves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jueves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_miercoles"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/txt_viernes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_viernes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_jueves"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/txt_sabado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sabado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_viernes"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/txt_domingo"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:text="@string/txt_domingo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sabado"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_total"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_calcular"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/min_lunes"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toEndOf="@+id/txt_lunes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <EditText
        android:id="@+id/min_martes"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toEndOf="@+id/txt_martes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <EditText
        android:id="@+id/min_miercoles"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toEndOf="@+id/txt_miercoles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <EditText
        android:id="@+id/min_jueves"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/txt_jueves"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <EditText
        android:id="@+id/min_viernes"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/txt_viernes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <EditText
        android:id="@+id/min_sabado"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/txt_sabado"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <EditText
        android:id="@+id/min_domingo"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/txt_domingo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/txt_recomendacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_recomendacion"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_total"
        app:layout_constraintVertical_bias="0.295" />
</androidx.constraintlayout.widget.ConstraintLayout>